--- a/Assets/style.css
+++ b/Assets/style.css
@@ -22,7 +22,7 @@ button {
 }
 
 #main-header {
-    
+
 }
 
 button a {
@@ -39,6 +39,15 @@ button a {
     padding: 1rem;
 }
 
+.banner  {
+    color: var(--words);
+    font-size: 150%;
+    background: radial-gradient(circle, rgb(254, 254, 254) 0%, rgb(255, 116, 51) 100%, rgb(255, 116, 51) 100%);
+    height: 5rem;
+    width: 100%;
+    text-align: center;
+}
+
 h1, h2, h3 {
     color: var(--words);
     font-size: 100%;
@@ -51,10 +60,9 @@ h1, h2, h3 {
 
 }
 
-#about-me, #work {
+#about-me {
     display: flex;
-    flex-direction: column;
-    justify-content: right;
+    justify-content: space-evenly;
     margin: 0 5rem;
     font-size: 125%
 }
@@ -66,14 +74,25 @@ h1, h2, h3 {
     font-size: 100%
 
 }
+#work {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 0 5rem;
+    font-size: 125%
+
+}
 
 #contact-me {
     margin: 0 5rem;
     font-size: 125%
 }
+
 ul {
     color: grey;
-    justify-content: center;
+    text-align: center;
+    list-style: none;
+    
 }
 footer {
     color: var(--words);
@@ -84,8 +103,22 @@ footer {
 }
 
 img {
-    height: 200px;
-    width: 150px;
+    height: 25rem;
+    width: 50%;
     margin: 5px;
     padding: 10px;
+}
+
+
+
+@media screen and (max-width: 992px) {
+
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 576px) {
+
 }
