--- a/Assets/style.css
+++ b/Assets/style.css
@@ -21,7 +21,15 @@ button {
     text-decoration: underline;
 }
 
-#main-header {
+h1, h2, h3 {
+    color: var(--words);
+    font-size: 100%;
+    font-size: 150%;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin: 1rem;
+    padding: 1rem;
 
 }
 
@@ -42,22 +50,10 @@ button a {
 .banner  {
     color: var(--words);
     font-size: 150%;
-    background: radial-gradient(circle, rgb(254, 254, 254) 0%, rgb(255, 116, 51) 100%, rgb(255, 116, 51) 100%);
+    background: radial-gradient(circle, rgb(254, 254, 254) 0%, rgb(255, 123, 93) 100%, rgb(255, 116, 51) 100%);
     height: 5rem;
     width: 100%;
     text-align: center;
-}
-
-h1, h2, h3 {
-    color: var(--words);
-    font-size: 100%;
-    font-size: 150%;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    margin: 1rem;
-    padding: 1rem;
-
 }
 
 #about-me {
@@ -76,10 +72,10 @@ h1, h2, h3 {
 }
 #work {
     display: flex;
-    flex-direction: column;
+    margin: 0;
+    font-size: 125%;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    margin: 0 5rem;
-    font-size: 125%
 
 }
 
@@ -102,13 +98,42 @@ footer {
 
 }
 
-img {
+.project-img {
+    height: 25rem;
+    object-fit: contain;
+    max-inline-size: 100%;
+    margin: 1rem;
+}
+
+#self-picture {
     height: 25rem;
     width: 50%;
     margin: 5px;
     padding: 10px;
+    object-fit: contain;
 }
 
+#featured-project-img {
+    width: 100vw;
+    object-fit: cover;
+}
+#featured-project {
+    position: relative;
+}
+
+#featured-project-deployed {
+    position: absolute;
+    bottom: 4rem;
+    left: 1rem;
+    color: var(--words)
+}
+
+#featured-project-github {
+    position: absolute;
+    bottom: 2rem;
+    left: 1rem;
+    color: var(--words)
+}
 
 
 @media screen and (max-width: 992px) {
@@ -120,5 +145,5 @@ img {
 }
 
 @media screen and (max-width: 576px) {
-
+   
 }
